plugin/src/test/resources/annotator/perl/unreachableCode/exitFromInnerSub.code
sub somesub{
    'before';
    sub Exit {
        'inner before';
        exit;
        '<error descr="Unreachable code">inner after</error>';
    }
    'after';
    sub preload {
        'inner before';
        exit;
    }
    'after';
}
